fixed log in page visibility issue

--- a/login_style.css
+++ b/login_style.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 /*Global colour variables*/
+html, body {
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
 :root {
     --main-color:black;
     --secondary_color:rgb(196, 196, 196);
@@ -23,8 +28,6 @@ body {
     font-family: Nunito, Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    height: 100vh;
-    overflow: hidden;
 }
 a {
     color:#646464;
@@ -35,7 +38,7 @@ a {
     background-color: white;
     color:black;
     width:100%;
-    position: fixed;
+    position: absolute;
     border-radius: 0 0 15px 15px;
     z-index: 1000;
     border: 1px solid var(--border_outline_color);
@@ -200,13 +203,16 @@ a {
 
 /* Login container */
 
+.container {
+    height: 900px;
+}
 
 .center {
     position: absolute;
-    top: 50%;
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 27vw;
+    width: 600px;
     background: white;
     border-radius: 15px;
     box-shadow: 0 10px 10px rgba(113, 17, 17, 0.05);
@@ -357,13 +363,12 @@ input[type="Submit"]:hover{
     padding-right: 10px;
   }
 
-  @media only screen and (max-width: 1500px) {
-    .center{
-        width: 60vh;
+
+@media screen and (max-width: 1600px) {
+    .center {
+        margin: 100px 0;
     }
-  }
-
-
+}
 
 /*Mobile display*/
 @media only screen and (max-width: 1000px) {
